v1.9.0-beta Planning - fix. affichage list events - fix. clavier masque liste quand input => mettre input au dessus de liste - feat. mettre en evidence les miinutes divisible par 5 dans le select de la vue add event - feat. selectionner 10h par defaut dans le select de la vue add event

--- a/planning/style.css
+++ b/planning/style.css
@@ -147,7 +147,7 @@
   }
 
   #events {
-      height: 315px;
+      max-height: 283px;
       overflow-y: scroll;
   }
 
@@ -155,4 +155,8 @@
       text-align: left;
       width: 125px;
       margin-left: 3px;
+  }
+
+  #events_search_title {
+      width: 80%;
   }
